# thesis

./: .gitattributes  .gitignore  .gitmodules  .latexmkrc  Makefile  code.sty  lstlang0.sty  preamble.tex  sec-1-introduction.tex  sec-2-background.tex  sec-3-design.tex  sec-4-implementation.tex  sec-5-optimisation.tex  sec-5-results.tex  sec-6-conclusion.tex  sec-6-results.tex  sec-7-conclusion.tex  sec-i-disclaimer.tex  sec-iii-abstract.tex  thesis.bib  thesis.tex  title.tex
benchmarks/bandwidth.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/black-scholes.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/canny.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/convertAcc.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/data/kernels/: blackscholes1.cu  canny10.cu  canny11.cu  canny2.cu  canny3.cu  canny6.cu  canny8.cu  compile_test.sh  dotp2.cu  fluid1.cu  fluid11.cu  fluid2.cu  fluid3.cu  fluid4.cu  fluid6.cu  fluid9.cu  k-means3.cu  nbody2.cu  parallel  radixsort7.cu  radixsort8.cu  ray1.cu  smvm2.cu  smvm4.cu
benchmarks/data/kernels/canny/: canny1.cu  canny4.cu  canny5.cu  canny7.cu
benchmarks/data/kernels/dotp/: dotp1.cu
benchmarks/data/kernels/floyd-warshall/: floyd-warshall1.cu  floyd-warshall2.cu
benchmarks/data/kernels/fluid/: fluid10.cu  fluid5.cu  fluid7.cu  fluid8.cu
benchmarks/data/kernels/hashcat/: hashcat1.cu
benchmarks/data/kernels/k-means/: k-means1.cu  k-means2.cu  k-means4.cu  k-means5.cu
benchmarks/data/kernels/lulesh/: dragon70956.cu  dragon70957.cu  dragon70958.cu  dragon70959.cu  dragon70960.cu  dragon70961.cu  dragon70962.cu  dragon70963.cu  dragon70964.cu  dragon70965.cu  dragon70966.cu  dragon70967.cu  dragon70968.cu  dragon70969.cu  dragon70970.cu  dragon70971.cu  dragon70972.cu  dragon70973.cu  dragon70974.cu  dragon70975.cu  dragon70976.cu  dragon70977.cu  dragon70978.cu  dragon70979.cu  dragon70980.cu  dragon70981.cu  dragon70982.cu  dragon70983.cu
benchmarks/data/kernels/mandelbrot/: mandelbrot1.cu
benchmarks/data/kernels/nbody/: nbody1.cu
benchmarks/data/kernels/radixsort/: radixsort1.cu  radixsort2.cu  radixsort3.cu  radixsort4.cu  radixsort5.cu  radixsort6.cu
benchmarks/data/kernels/smvm/: smvm1.cu  smvm3.cu
benchmarks/dotp.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/floyd-warshall.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/fluid.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/k-means.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/lulesh.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/n-body.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/radixsort.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/ray.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/smvm.numbers/Metadata/: DocumentIdentifier  Properties.plist
benchmarks/src/bandwidth/: Main.hs  bandwidth.cabal
benchmarks/src/black-scholes/cuda/: BlackScholes.cu  Makefile
benchmarks/src/black-scholes/haskell/: blackscholes.cabal
benchmarks/src/black-scholes/haskell/src/: Main.hs
benchmarks/src/black-scholes/haskell/src/Solver/: Accelerate.hs  Common.hs  Repa.hs
benchmarks/src/canny/accelerate/: canny.cabal
benchmarks/src/canny/repa/: Main.hs  canny.cabal
benchmarks/src/convertAcc/: Main.hs  convertAcc.cabal
benchmarks/src/dotp/haskell/: dotp.cabal
benchmarks/src/floyd-warshall/haskell/: floyd-warshall.cabal
benchmarks/src/floyd-warshall/haskell/src/: Main.hs
benchmarks/src/floyd-warshall/haskell/src/Random/: Graph.hs
benchmarks/src/floyd-warshall/haskell/src/Solver/: Accelerate.hs  MonadPar.hs  Repa.hs
benchmarks/src/fluid/accelerate/: fluid.cabal
benchmarks/src/k-means/haskell/: kmeans.cabal
benchmarks/src/k-means/haskell/src/: GenSamples.hs  Main.hs  Type.hs
benchmarks/src/k-means/haskell/src/Solver/: Accelerate.hs  Common.hs  DivEval.hs  DivPar.hs  Par.hs  Strategies.hs
benchmarks/src/n-body/vector/: n-body.cabal
benchmarks/src/ray/repa/: ray.cabal
benchmarks/src/ray/repa/src/: Main.hs  State.hs  World.hs
benchmarks/src/smvm/accelerate/: smvm.cabal
benchmarks/src/smvm/accelerate/src/: Main.hs
images/: Makefile  Makefile.common
images/basics/: tree-reduction.graffle
images/impl/occupancy/: OccupancyTest.hs  occupancy.gnuplot
images/results/bandwidth/: bandwidth.gnuplot  time.gnuplot
images/results/black-scholes/: black-scholes.gnuplot
images/results/canny/: canny.gnuplot
images/results/convertAcc/: convertAcc.gnuplot
images/results/dotp/: dotp.gnuplot
images/results/floyd-warshall/: floyd-warshall.gnuplot
images/results/fluid/: fluid.gnuplot
images/results/k-means/: k-means.gnuplot
images/results/lulesh/: lulesh.gnuplot
images/results/nbody/: nbody.gnuplot
images/results/radixsort/: radixsort.gnuplot
images/results/ray/: ray.gnuplot
images/sec-0/: Makefile
images/sec-3/: outline-s.graffle  outline.graffle
images/sec-4/: scan.graffle
images/sec-4/occupancy/: occupancy.gnuplot
images/sec-5/: Makefile
images/sec-6/black-scholes/: black-scholes.gnuplot
images/sec-6/canny/: canny.gnuplot
images/sec-6/dotp/: dotp.gnuplot
images/sec-6/floyd-warshall/: floyd-warshall.gnuplot
images/sec-6/fluid/: fluid.gnuplot
images/sec-6/k-means/: k-means.gnuplot
images/sec-6/nbody/: nbody.gnuplot
images/sec-6/radixsort/: radixsort.gnuplot
images/sec-6/ray/: ray.gnuplot
listings/: Histogram.hs  dotp.cu  histogram.cu  mandel+fusion.cu  mandel+loop_recovery.cu  mandel.cu  smvm.cu
sections/: 01-introduction.tex  02-background.tex  02-basics.tex  03-accelerate.tex  03-design.tex  03-implementation.tex  04-implementation.tex  05-optimisation.tex  05-results.tex  06-results.tex  07-conclusion.tex  i-disclaimer.tex  i-submission.tex  ii-declaration.tex  iii-abstract.tex  iv-acknowledgements.tex  v-lastpage.tex
semantics/: Makefile  Makefile.common
semantics/language/: Makefile
semantics/tutorial/: test10.ott  test10.tex  test10.v
(+45 files in other folders)
