name:                   runtime
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable runtime
  main-is:              Main.hs
  build-depends:
          base
        , accelerate
        , criterion

  ghc-options:
        -O3 -Wall

  default-language:     Haskell2010

