name:                   blackscholes
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable blackscholes
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3

  build-depends:
            base                   >= 4.7  && <4.8
          , accelerate             >= 0.15 && <0.16
          , accelerate-cuda        >= 0.15 && <0.16
          , accelerate-io          >= 0.15 && <0.16
          , criterion              >= 0.8  && <0.9
          , mwc-random             >= 0.13 && <0.14
          , repa                   >= 3.2  && <3.3

  default-language:    Haskell2010

