name:                   canny
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

executable canny
  main-is:              Main.hs
  -- other-modules:
  build-depends:
          base                  >=4.7 && <4.8
        , repa                  >=3.2 && <3.3
        , repa-algorithms       >=3.2 && <3.3
        , repa-io               >=3.2 && <3.3
        , vector                >=0.10 && <0.11

  ghc-options:
        -Wall -Odph -threaded -rtsopts -fllvm -optlo-O3 -fno-liberate-case
        -funfolding-use-threshold100 -funfolding-keeness-factor100

  default-language:     Haskell2010
