name:                   floyd-warshall
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable floyd-warshall
  main-is:              Main.hs
  hs-source-dirs:       src

  build-depends:
          base                  >= 4.7 && <4.8
        , accelerate            >= 0.15 && <0.16
        , accelerate-cuda       >= 0.15 && <0.16
        , array                 >= 0.5 && <0.6
        , containers            >= 0.5 && <0.6
        , criterion             >= 0.8 && <0.9
        , monad-par             >= 0.3 && <0.4
        , mwc-random            >= 0.13 && <0.14
        , repa                  >= 3.2 && <3.3
        , transformers          >= 0.3 && <0.4

  ghc-options:
        -Wall -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
        -funfolding-use-threshold100 -funfolding-keeness-factor100

  default-language:     Haskell2010
