name:                   ray
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable ray
  main-is:              Main.hs
  hs-source-dirs:       src
  -- other-modules:
  build-depends:
          base                  >= 4.7 && <4.8
        , criterion             >= 0.8 && <0.9
        , gloss                 >= 1.8 && <1.9
        , gloss-raster          >= 1.8 && <1.9
        , repa                  >= 3.2 && <3.3
        , repa-io               >= 3.2 && <3.3

  ghc-options:
        -Wall -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
        -funfolding-use-threshold100 -funfolding-keeness-factor100

  default-language:    Haskell2010
