name:                   smvm
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable smvm
  main-is:              Main.hs
  hs-source-dirs:       src
  -- other-modules:

  build-depends:
          base                  >= 4.7 && <4.8
        , accelerate            >= 0.15 && <0.16
        , accelerate-cuda       >= 0.15 && <0.16
        , accelerate-io         >= 0.15 && <0.16
        , attoparsec            >= 0.11 && <0.13
        , bytestring            >= 0.10 && <0.11
        , bytestring-lexing     >= 0.4 && <0.5
        , criterion             >= 0.8 && <0.9
        , mwc-random            >= 0.13 && <0.14
        , vector                >= 0.10 && <0.11
        , vector-algorithms     >= 0.6 && <0.7

  ghc-options:
        -Wall -threaded -rtsopts -fllvm -optlo-O3 -Odph -fno-liberate-case
        -funfolding-use-threshold100 -funfolding-keeness-factor100
        -fsimpl-tick-factor=200

  default-language:     Haskell2010
